// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkPhoneNumberInput should render correctly 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(129, 123, 143, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "rgb(230, 228, 235)",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 4,
          }
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "rgb(243, 242, 245)",
                "height": 12,
                "marginEnd": 8,
                "width": 16,
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "marginEnd": "auto",
                },
                false,
              ],
            ]
          }
        >
          +44
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Object {
                "marginStart": 4,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgb(37, 32, 51)",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={true}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`iOS BpkPhoneNumberInput should render correctly with \`editable\` false 1`] = `
<View
  style={
    Array [
      undefined,
      null,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 18,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      collapsable={undefined}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(230, 228, 235, 1)",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      Phone number
    </Text>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
          "disabled",
        ]
      }
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
      testID={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "rgb(230, 228, 235)",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 4,
          }
        }
      >
        <Image
          resizeMode="contain"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "rgb(243, 242, 245)",
                "height": 12,
                "marginEnd": 8,
                "width": 16,
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "marginEnd": "auto",
                },
                Object {
                  "color": "rgb(230, 228, 235)",
                },
              ],
            ]
          }
        >
          +44
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Object {
                "marginStart": 4,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgb(37, 32, 51)",
              "bottom": 0,
              "flex": 1,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <View
      collapsable={undefined}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(230, 228, 235, 1)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "marginStart": 4,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        clearButtonMode="while-editing"
        editable={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder={null}
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "rgb(82, 76, 97)",
            "flex": 1,
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
            "minHeight": 28,
            "paddingHorizontal": 0,
            "paddingVertical": 4,
            "textAlign": "left",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;
